# extensions

./: CMakeLists.txt  extension_config.cmake
adbc/: CMakeLists.txt
adbc/src/catalog/: CMakeLists.txt  adbc_catalog.cpp  adbc_table_catalog_entry.cpp
adbc/src/connector/: CMakeLists.txt  adbc_connector.cpp
adbc/src/function/: CMakeLists.txt  adbc_scan.cpp
adbc/src/include/catalog/: adbc_catalog.h  adbc_table_catalog_entry.h
adbc/src/include/connector/: adbc_connector.h
adbc/src/include/function/: adbc_scan.h
adbc/src/include/main/: adbc_extension.h
adbc/src/include/storage/: adbc_storage.h  attached_adbc_database.h
adbc/src/main/: CMakeLists.txt  adbc_extension.cpp
adbc/src/storage/: CMakeLists.txt  adbc_storage.cpp
adbc/test/test_files/: adbc.test
algo/src/function/: louvain.cpp  spanning_forest.cpp  strongly_connected_components_kosaraju.cpp
azure/src/function/: azure_scan.cpp
azure/test/test_files/: azure.test
delta/src/function/: delta_scan.cpp
duckdb/src/catalog/: duckdb_catalog.cpp  duckdb_table_catalog_entry.cpp
duckdb/src/connector/: connector_factory.cpp  duckdb_connector.cpp  duckdb_result_converter.cpp  duckdb_secret_manager.cpp
duckdb/src/function/: duckdb_scan.cpp
duckdb/test/test_files/: duckdb.test
fts/src/catalog/: fts_index_catalog_entry.cpp
fts/src/function/: create_fts_index.cpp  fts_index_utils.cpp  query_fts_index.cpp  stem.cpp
gremlin/: CMakeLists.txt
gremlin/test/: basic.test
httpfs/src/: http_config.cpp  httpfs.cpp  s3fs.cpp
json/test/: scan_json.test
vector/: README.md
(+64 files in other folders)
